--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ services:
 before_install:
   - docker build -t bringup/docker-react -f Dockerfile.dev .
 script:
-  - docker run -e CI=true bringup/docker-react npm run test -- --coverage 
+  - docker run -e CI=true bringup/docker-react npm run test
